ClassMicroService/openshift/assets/mongo_service.yml
kind: Service
apiVersion: v1
metadata:
  name: class-mongodb-service
  annotations:
    description: Exposes and load balances the application pods
  labels:
    app: class-mongodb
spec:
  ports:
    - name: tcp
      port: 27017
      targetPort: 27017
  selector:
    app: class-mongodb
