ClassMicroService/openshift/assets/microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-microservice-deployment
  namespace: bramterlouw-dev
  labels:
    app.kubernetes.io/part-of: class-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: class-microservice-deployment
      app: class-microservice-app
      project: language-fitness
  template:
    metadata:
      labels:
        name: class-microservice-deployment
        app: class-microservice-app
        project: language-fitness
    spec:
      containers:
        - name: class-microservice
          image: microservice_image
          ports:
            - containerPort: 8082
            - containerPort: 9093
          readinessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 3
            httpGet:
              path: "/health/ready"
              port: 8082
          livenessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 30
            httpGet:
              path: "/health/live"
              port: 8082
---
kind: Service
apiVersion: v1
metadata:
  name: class-microservice-service
  namespace: bramterlouw-dev
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: class-microservice-service
    app: class-microservice-app
    project: language-fitness
spec:
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: tcp
      port: 9093
      targetPort: 9093
      protocol: TCP
  selector:
    name: class-microservice-deployment
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: class-microservice-route
  namespace: bramterlouw-dev
  labels:
    name: class-microservice-route
    app: class-microservice-app
    project: language-fitness
spec:
  port:
    targetPort: 8082
  to:
    kind: Service
    name: class-microservice-service
